[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "c"
version = "2024.0.0"
requires-python = ">= 3.10"
readme = "README.md"
license = {file = "LICENSE"}

[project.optional-dependencies]
dev = [
    "pyinstaller==6.9.0",
    "ipykernel==6.29.5",
    "black"
]